printer: Bilder in img Ordner verschoben

--- a/5.0/printer/App.cshtml
+++ b/5.0/printer/App.cshtml
@@ -11,17 +11,17 @@
   <title>Vocatis</title>
   <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0">
   <meta name="theme-color" content="#53668D"/>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
   <link href="@Href("app.css")" type="text/css" rel="stylesheet" />
 </head>
 <body>
   <header>
- <img src="plattform_01.png" class="plattform" alt="plattform">
+ <img src="img/plattform_01.png" class="plattform" alt="plattform">
  <h1><span style="text-transform:uppercase">@string_map["App_Title_a"]</span> @string_map["App_Title_b"]</h1>
 </header>
 
 <section class="logo">
-  <img src="customerlogo.png" />
+  <img src="img/customerlogo.png" />
 </section>
 
 <div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["i"], lang})">
