--- a/5.0/printer/QueueList.cshtml
+++ b/5.0/printer/QueueList.cshtml
@@ -88,7 +88,7 @@
         </div>
         <div class="single-button" >
           <span>
-            <img src="single-button.gif" /><br>
+            <img src="img/single-button.gif" /><br>
             <p>Bitte drücken!</p>
           </span>
         </div>
