--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -23,20 +23,20 @@
   <section id="waitPopup" style="display: none;">
     <h4>@string_map["Print_WaitHeader"]</h4>
     <div>
-      <img src="wait.gif" id="wait" alt="wait" />
+      <img src="img/wait.gif" id="wait" alt="wait" />
     </div>
     <p>@string_map["Print_WaitText"]</p>
-    <img src="PfeilRechts.png" />
+    <img src="img/PfeilRechts.png" />
   </section>
 
   @* take popup is shown, when the printout is ready *@
   <section id="takePopup" style="display: none;">
       <h4>@string_map["Print_TakeHeader"]</h4>
     <div>
-      <img src="wait.gif" id="wait" alt="wait" />
+      <img src="img/wait.gif" id="wait" alt="wait" />
     </div>
     <p>@string_map["Print_TakeText"]</p>
-    <img src="PfeilRechts.png" />
+    <img src="img/PfeilRechts.png" />
   </section>
 
   @* show popup shows the number on the screen *@
