--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -35,13 +35,13 @@ var string_map = PageData["string_map"];
   <h1>
     @ticket.Number
   </h1>
-  <img src="separation.png" class="separation" alt="Trennung">
+  <img src="img/separation.png" class="separation" alt="Trennung">
   <section class="qrcode">
     @if (withQrCode) {
     <h4>@string_map["Ticket_AppHeader"]</h4>
     <a href="@Href("App.cshtml", new {i=ticket.Id, t=tracking_id, l=lang})"></a>
     }
-    <img src="customerlogo.png" class="customerlogo" alt="Ersatztext">
+    <img src="img/customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
   <footer>
   </footer>
