--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -1,5 +1,109 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <StyleList xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://stollsoft.de/iSign/v2/Content/Forms/Styles">
+{{#*inline "configFields"}}
+<field key="im">
+  <names>
+    <name>Zeitpunkt</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="+5min">5min nach Termin importieren</text>
+    <text key="jit">Zur Terminzeit importieren</text>
+    <text key="-5min">5min vor Termin importieren</text>
+    <text key="-30min">30min vor Termin importieren</text>
+    <text key="-60min">60min vor Termin importieren</text>
+    <text key="day">Ganzen Tag importieren</text>
+  </content_class>
+</field>
+<field key="nm">
+  <names>
+    <name>Wartenummer</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="whole">Komplett</text>
+    <text key="last3">Letzte 3 Stellen</text>
+    <text key="last4">Letzte 4 Stellen</text>
+    <text key="Tlast3">T + Letzte 3 Stellen</text>
+    <text key="Tlast4">T + Letzte 4 Stellen</text>
+  </content_class>
+</field>
+{{/inline}}
+{{#*inline "dsFields1"}}
+<field key="import">
+  <names>
+    <name>Termine</name>
+  </names>
+  <content_class type="DataSource" />
+</field>
+<field key="id">
+  <names>
+    <name>ID</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
+<field key="ref">
+  <names>
+    <name>Referenz</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
+{{/inline}}
+{{#*inline "dsFields2"}}
+<field key="tz">
+  <names>
+    <name>Import Zeitzone</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="srv">Serverzeit</text>
+    <text key="utc">Weltzeit (UTC)</text>
+  </content_class>
+</field>
+<field key="name">
+  <names>
+    <name>Name</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
+<field key="title">
+  <names>
+    <name>Anliegen</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
+<field key="description">
+  <names>
+    <name>Beschreibung</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
+<field key="plan">
+  <names>
+    <name>Terminplan</name>
+  </names>
+  <content_class bind="Column" parentField="import" type="TextFree" />
+</field>
+{{/inline}}
+{{#*inline "queueFields"}}
+{{#range 1 5}}
+<field key="plan_name{{this}}">
+  <names>
+    <name>Terminplan {{this}}</name>
+  </names>
+  <content_class type="TextFree" />
+</field>
+<field key="queueid{{this}}">
+  <names>
+    <name>Warteschlange {{this}}</name>
+  </names>
+  <content_class type="VocatisQueue"  />
+</field>
+{{/range}}
+<field key="category">
+  <names>
+    <name>Kategorie</name>
+  </names>
+  <content_class type="VocatisCategories"  />
+</field>
+{{/inline}}
 
   <style key="vocatis_import_appointments_2019_ts"
           file="ImportFromData.cshtml" preview="preview.png"
@@ -8,142 +112,16 @@
       <name culture="de">Vocatis Terminimport mit Zeitpunkt ({{version}})</name>
     </names>
     <fields>
-      <field key="im">
-        <names>
-          <name>Zeitpunkt</name>
-        </names>
-        <content_class type="TextChoose">
-          <text key="+5min">5min nach Termin importieren</text>
-          <text key="jit">Zur Terminzeit importieren</text>
-          <text key="-5min">5min vor Termin importieren</text>
-          <text key="-30min">30min vor Termin importieren</text>
-          <text key="-60min">60min vor Termin importieren</text>
-          <text key="day">Ganzen Tag importieren</text>
-        </content_class>
-      </field>
-      <field key="nm">
-        <names>
-          <name>Wartenummer</name>
-        </names>
-        <content_class type="TextChoose">
-          <text key="whole">Komplett</text>
-          <text key="last3">Letzte 3 Stellen</text>
-          <text key="last4">Letzte 4 Stellen</text>
-          <text key="Tlast3">T + Letzte 3 Stellen</text>
-          <text key="Tlast4">T + Letzte 4 Stellen</text>
-        </content_class>
-      </field>
-      <field key="import">
-        <names>
-          <name>Termine</name>
-        </names>
-        <content_class type="DataSource" />
-      </field>
-      <field key="id">
-        <names>
-          <name>ID</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="ref">
-        <names>
-          <name>Referenz</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
+      {{> configFields}}
+      {{> dsFields1}}
       <field key="ts">
         <names>
           <name>Zeitpunkt</name>
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
       </field>
-      <field key="tz">
-        <names>
-          <name>Import Zeitzone</name>
-        </names>
-        <content_class type="TextChoose">
-          <text key="srv">Serverzeit</text>
-          <text key="utc">Weltzeit (UTC)</text>
-        </content_class>
-      </field>
-      <field key="name">
-        <names>
-          <name>Name</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="title">
-        <names>
-          <name>Anliegen</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="description">
-        <names>
-          <name>Beschreibung</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="plan">
-        <names>
-          <name>Terminplan</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="plan_name1">
-        <names>
-          <name>Terminplan 1</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid1">
-        <names>
-          <name>Warteschlange 1</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="plan_name2">
-        <names>
-          <name>Terminplan 2</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid2">
-        <names>
-          <name>Warteschlange 2</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="plan_name3">
-        <names>
-          <name>Terminplan 3</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid3">
-        <names>
-          <name>Warteschlange 3</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="plan_name4">
-        <names>
-          <name>Terminplan 4</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid4">
-        <names>
-          <name>Warteschlange 4</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="category">
-        <names>
-          <name>Kategorie</name>
-        </names>
-        <content_class type="VocatisCategories"  />
-      </field>
+      {{> dsFields2}}
+      {{> queueFields}}
     </fields>
   </style>
   <style key="vocatic_import_appointments_2019"
@@ -153,49 +131,8 @@
       <name culture="de">Vocatis Terminimport mit Zeit und Uhrzeit ({{version}})</name>
     </names>
     <fields>
-      <field key="im">
-        <names>
-          <name>Zeitpunkt</name>
-        </names>
-        <content_class type="TextChoose">
-          <text key="+5min">5min nach Termin importieren</text>
-          <text key="jit">Zur Terminzeit importieren</text>
-          <text key="-5min">5min vor Termin importieren</text>
-          <text key="-30min">30min vor Termin importieren</text>
-          <text key="-60min">60min vor Termin importieren</text>
-          <text key="day">Ganzen Tag importieren</text>
-        </content_class>
-      </field>
-      <field key="nm">
-        <names>
-          <name>Wartenummer</name>
-        </names>
-        <content_class type="TextChoose">
-          <text key="whole">Komplett</text>
-          <text key="last3">Letzte 3 Stellen</text>
-          <text key="last4">Letzte 4 Stellen</text>
-          <text key="Tlast3">T + Letzte 3 Stellen</text>
-          <text key="Tlast4">T + Letzte 4 Stellen</text>
-        </content_class>
-      </field>
-      <field key="import">
-        <names>
-          <name>Termine</name>
-        </names>
-        <content_class type="DataSource" />
-      </field>
-      <field key="id">
-        <names>
-          <name>ID</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="ref">
-        <names>
-          <name>Referenz</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
+      {{> configFields}}
+      {{> dsFields1}}
       <field key="date">
         <names>
           <name>Datum</name>
@@ -208,93 +145,8 @@
         </names>
         <content_class bind="Column" parentField="import" type="TextFree" />
       </field>
-      <field key="tz">
-        <names>
-          <name>Import Zeitzone</name>
-        </names>
-        <content_class type="TextChoose">
-          <text key="srv">Serverzeit</text>
-          <text key="utc">Weltzeit (UTC)</text>
-        </content_class>
-      </field>
-      <field key="name">
-        <names>
-          <name>Name</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="title">
-        <names>
-          <name>Anliegen</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="description">
-        <names>
-          <name>Beschreibung</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="plan">
-        <names>
-          <name>Terminplan</name>
-        </names>
-        <content_class bind="Column" parentField="import" type="TextFree" />
-      </field>
-      <field key="plan_name1">
-        <names>
-          <name>Terminplan 1</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid1">
-        <names>
-          <name>Warteschlange 1</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="plan_name2">
-        <names>
-          <name>Terminplan 2</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid2">
-        <names>
-          <name>Warteschlange 2</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="plan_name3">
-        <names>
-          <name>Terminplan 3</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid3">
-        <names>
-          <name>Warteschlange 3</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="plan_name4">
-        <names>
-          <name>Terminplan 4</name>
-        </names>
-        <content_class type="TextFree" />
-      </field>
-      <field key="queueid4">
-        <names>
-          <name>Warteschlange 4</name>
-        </names>
-        <content_class type="VocatisQueue"  />
-      </field>
-      <field key="category">
-        <names>
-          <name>Kategorie</name>
-        </names>
-        <content_class type="VocatisCategories"  />
-      </field>
+      {{> dsFields2}}
+      {{> queueFields}}
     </fields>
   </style>
 </StyleList>
