--- a/5.0/printer/App.cshtml
+++ b/5.0/printer/App.cshtml
@@ -24,7 +24,7 @@
   <img src="img/customerlogo.png" />
 </section>
 
-<div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["i"], lang})">
+<div id="content" data-content-src="@Href("AppContent.cshtml", new {id=Request["i"], o=Request["o"], lang})">
   <section class="loading content">
     @string_map["App_Loading"]
   </section>
@@ -38,7 +38,7 @@
 <footer>
   @foreach (var l in langs)
   {
-    <a class="button" href='@Href("App.cshtml", new { lang=l, id=Request["id"] })'>
+    <a class="button" href='@Href("App.cshtml", new { lang=l, id=Request["id"], o=Request["o"] })'>
       <p>@string_map["lang_" + l]</p>
       <img src="lang/@(l).png">
     </a>
