--- a/5.0/printer/PrinterTicket.cshtml
+++ b/5.0/printer/PrinterTicket.cshtml
@@ -10,6 +10,7 @@
   var Model = new FormsModel(this);
   var tracking_id = Request["tid"];
   var ticket_id = Request["id"];
+  var opt = Request["o"];
   WaitNumber ticket;
   if (!String.IsNullOrEmpty(ticket_id))
   {
@@ -23,7 +24,7 @@
   }
 }
 
-@helper content(bool withQrCode, string tracking_id, WaitNumber ticket) {
+@helper content(bool withQrCode, string tracking_id, WaitNumber ticket, string opt) {
 var lang = PageData["lang"];
 var string_map = PageData["string_map"];
 
@@ -39,7 +40,7 @@ var string_map = PageData["string_map"];
   <section class="qrcode">
     @if (withQrCode) {
     <h4>@string_map["Ticket_AppHeader"]</h4>
-    <a href="@Href("App.cshtml", new {i=ticket.Id, t=tracking_id, l=lang})"></a>
+    <a href="@Href("App.cshtml", new {i=ticket.Id, t=tracking_id, o=opt, l=lang})"></a>
     }
     <img src="img/customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
@@ -55,7 +56,7 @@ var string_map = PageData["string_map"];
 }
 
 @if (partial) {
-    @content(withQrCode, tracking_id, ticket)
+    @content(withQrCode, tracking_id, ticket, opt)
 }
 else {
 <!DOCTYPE html>
@@ -67,7 +68,7 @@ else {
 <body>
   @Scripts.Render("~/Scripts/jquery")
   <div class="print_ticket" style="display: block !important;">
-    @content(withQrCode, tracking_id, ticket)
+    @content(withQrCode, tracking_id, ticket, opt)
   </div>
 </body>
 </html>
