--- a/5.0/printer/QueueList.cshtml
+++ b/5.0/printer/QueueList.cshtml
@@ -15,6 +15,7 @@
   // Parse model
   var Model = new FormsModel(this);
   var mode = (string)Model.Style["mode"].FieldInstance.Value;
+  var opt = (string)Model.Style["wt"].FieldInstance.Value == "1" ? "wt" : ""; // app options (wt = show wait time)
 
   // Select ticket servce type (JSON vs HTML) by mode
   var ticketUrl = (mode == "print") ? "PrinterTicket.cshtml" : "Ticket.cshtml";
@@ -56,7 +57,7 @@
     {
       var catidI = Model.Style["catid" + i].Value as CommonGuidId[];
       string catids = catidI == null ? null : String.Join(",",catidI.Select(g=>g.ToString()).ToArray());
-    <li><a href="@Href(ticketUrl, new { queueid=queueid, catid=catids, tid=tracking_id, lang=lang })" data-label="@((string)Model.Style["text" + i].Value)"
+    <li><a href="@Href(ticketUrl, new { queueid=queueid, catid=catids, tid=tracking_id, o=opt, lang=lang })" data-label="@((string)Model.Style["text" + i].Value)"
     @if (status.QueueLength == 0) {<text>class="btn next-one"</text>} else {<text>class="btn"</text>}>
       <div>
         <svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 0.0,20.0 Z" /></g></svg>
@@ -94,7 +95,7 @@
         </div>
       </div>
       @if (showQrCode) {
-        <div class="qrcode" data-url="@Href("AppTicket.cshtml", new { q=queueid, c=catids, t=tracking_id, l=lang })"></div>
+        <div class="qrcode" data-url="@Href("AppTicket.cshtml", new { q=queueid, c=catids, t=tracking_id, l=lang, o=opt })"></div>
       }
     </a></li>
     @* manually closed *@
