verschiebe app in eingenen Unterordner

--- a/5.0/printer/AppTicket.cshtml
+++ b/5.0/printer/AppTicket.cshtml
@@ -13,5 +13,5 @@
   dynamic queueid = CommonGuidId.FromString(Request["q"]);
   dynamic catids = GuidIdsFieldInstance.ParseValue("",Request["c"]).Value;
   var ticket = Vocatis.CreateTicket(queueid, catids);
-  Response.Redirect(Href("App.cshtml", new {i=ticket.Id, t=tracking_id, o=opt, l=lang}));
+  Response.Redirect(Href("app", new {i=ticket.Id, t=tracking_id, o=opt, l=lang}));
 }
