--- a/5.0/printer/TicketDefault.cshtml
+++ b/5.0/printer/TicketDefault.cshtml
@@ -28,7 +28,7 @@
   <section class="qrcode">
     @if (withQrCode) {
     <h4>@string_map["Ticket_AppHeader"]</h4>
-    <a href="@Href("App.cshtml", new {i=id})"></a>
+    <a href="@Href("app", new {i=id})"></a>
     }
     <img src="img/customerlogo.png" class="customerlogo" alt="Ersatztext">
   </section>
