--- a/5.0/queueinfo/Styles.xml.handlebars
+++ b/5.0/queueinfo/Styles.xml.handlebars
@@ -6,6 +6,12 @@
       <name culture="de">Vocatis Warteinformation ({{version}})</name>
     </names>
     <fields>
+      <field key="appurl">
+        <names>
+          <name>Termin-Url</name>
+        </names>
+        <content_class type="TextFree" />
+      </field>
       {{#range 1 9}}
       <field key="text{{this}}">
         <names>
