--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -11,6 +11,17 @@
   </content_class>
 </field>
 {{#if enable_app}}
+<field key="qr">
+  <names>
+    <name>QR Code</name>
+  </names>
+    <content_class type="TextChoose">
+    <text key="0">Kein</text>
+    <text key="1">Nur Ticket</text>
+    <text key="2">Nur Monitor</text>
+    <text key="3">Monitor und Ticket</text>
+  </content_class>
+</field>
 <field key="wt">
   <names>
     <name>App Wartezeit</name>
