--- a/5.0/printer/QueueList.cshtml
+++ b/5.0/printer/QueueList.cshtml
@@ -7,15 +7,14 @@
 @using Stolltec.Vocatis.Model
 @using System.Web.Caching
 @{
+  // Parse model
+  var Model = PageData["ReadModel"](this);
   var disableOpenClose = !PageData["enable_open_close"];
   var showQrCode = PageData["list_print_or_scan"];
   var lang = PageData["lang"];
   var string_map = PageData["string_map"];
-
-  // Parse model
-  var Model = new FormsModel(this);
+  var opt = PageData["app_options"];
   var mode = (string)Model.Style["mode"].FieldInstance.Value;
-  var opt = Model.Style.StyleInstance.Where(f => f.Key == "wt").Select(f => (string)f.Value).FirstOrDefault() == "1" ? "wt" : ""; // app options (wt = show wait time)
 
   // Select ticket servce type (JSON vs HTML) by mode
   var ticketUrl = (mode == "print") ? "PrinterTicket.cshtml" : "Ticket.cshtml";
@@ -57,7 +56,7 @@
     {
       var catidI = Model.Style["catid" + i].Value as CommonGuidId[];
       string catids = catidI == null ? null : String.Join(",",catidI.Select(g=>g.ToString()).ToArray());
-    <li><a href="@Href(ticketUrl, new { queueid=queueid, catid=catids, tid=tracking_id, o=opt, lang=lang })" data-label="@((string)Model.Style["text" + i].Value)"
+    <li><a href="@Href(ticketUrl, new { queueid=queueid, catid=catids, tid=tracking_id, o=opt, qr=PageData["ticket_show_qr_code"], lang=lang })" data-label="@((string)Model.Style["text" + i].Value)"
     @if (status.QueueLength == 0) {<text>class="btn next-one"</text>} else {<text>class="btn"</text>}>
       <div>
         <svg xmlns="http://www.w3.org/2000/svg"><g><path d="M 0.0,0.0 10.0,10.0 0.0,20.0 Z" /></g></svg>
