printer: home button / Größe abhängig von Höhe statt Breite (wie Header)

--- a/5.0/styles/printer.scss
+++ b/5.0/styles/printer.scss
@@ -19,7 +19,7 @@ body.queueinfo {
             color: $color-primary-background;
         }
         .home {
-            width: 7%;
+            width: 5vh;
             margin: 6vh 20vw 0vh 0vw;
             float: right;
             border: 10px solid $color-primary-foreground;
