Standardticket: ticket_show_qr_code option durch enable_app ersetzt

--- a/5.0/printer/_PageStart.cshtml.handlebars
+++ b/5.0/printer/_PageStart.cshtml.handlebars
@@ -41,6 +41,9 @@
   }
 }
 @{
+  // app available?
+  PageData["enable_app"] = {{enable_app}};
+
   // enable open/close
   PageData["enable_open_close"] = {{enable_open_close}};
 
