Funktion highlight-Display: Schriftfarbe auf weiß geändert
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/5.0/styles/display.scss
+++ b/5.0/styles/display.scss
@@ -109,6 +109,7 @@ body {
     }
     tr.highlight td {
         background-color: $color-primary-background;
+        color: $color-primary-foreground;
     }
     div#popup.popup.simple {
         position: absolute;
