--- a/5.0/styles/style.scss
+++ b/5.0/styles/style.scss
@@ -11,6 +11,18 @@ html
     background-color: $color-common-background;
 }
 
+/* Set base font-size */
+html {
+    font-size: 1.48vh; /* 16px / 1080px */
+    @media only screen and (orientation: portrait) {
+        font-size: 0.83vh; /* 16px / 1920px */
+    }
+
+    svg {
+        font-size: initial;
+    }
+}
+
 body
 {
     margin: 0;
