--- a/5.0/printer/Styles.xml.handlebars
+++ b/5.0/printer/Styles.xml.handlebars
@@ -84,6 +84,15 @@
   </names>
   <content_class type="VocatisCategories"/>
 </field>
+<field key="pp">
+  <names>
+    <name>Zurückstellen bis Termin</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="0">Nein</text>
+    <text key="1">Ja</text>
+  </content_class>
+</field>
 <field key="import">
   <names>
     <name>Termine</name>
