--- a/5.0/import/Styles.xml.handlebars
+++ b/5.0/import/Styles.xml.handlebars
@@ -14,6 +14,15 @@
     <text key="day">Ganzen Tag importieren</text>
   </content_class>
 </field>
+<field key="pp">
+  <names>
+    <name>Zurückstellen bis Termin</name>
+  </names>
+  <content_class type="TextChoose">
+    <text key="0">Nein</text>
+    <text key="1">Ja</text>
+  </content_class>
+</field>
 <field key="nm">
   <names>
     <name>Wartenummer</name>
