--- a/5.0/printer/P1_Appointment.cshtml
+++ b/5.0/printer/P1_Appointment.cshtml
@@ -12,7 +12,7 @@
 
 @{
   // Parse model
-  var Model = PageData["ReadModel"](this);
+  FormsModel Model = PageData["ReadModel"](this);
   var showQrCode = PageData["appointment_print_or_scan"];
   var lang = PageData["lang"];
   var string_map = PageData["string_map"];
